--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
-<ul>
-    <li>Öªºõ</li>
-    <li>CSDN</li>
-    <li>²©¿ÍÔ°</li>
-</ul>
-1
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>For Ricky</title>
+    </head>
+    <body background = "weather.png">
+        <h1 align="center"><font color="#FF8040">我想告诉妳</font></h1>
+        <h2 align="center" style="color:#AE57A4 ">爱的心路旅程</h2>
+        <h2 align="center" style="color:#DEDEBE ">不可能是我独徘徊</h2>
+        <h2 align="center"><font color="#C7C7E2">需要两个人相向而行</font></h2>
+        <h2 align="center"><font color="#00CED1">我会努力做到即使你不说话也懂你的心意</font></h2>
+        <h2 align="center" style="color:#F0E68C ">现在是个坎</h2>
+        <h2 align="center" style="color:#DAA520 ">跨过去了一切都会变得更好</h2>
+        
+    </body>
+</html>
