--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 			    <!--页头 -->
 				<div id="header">
 					<div id="header-content"  >
-					<h1 id="change"><a href="js:bgImage();">个人网站</a></h1>
-					<p>Zheng XiaoXue's Personal Website</p>
+					<h1 id="change"><a href="js:bgImage();">Tell Her</a></h1>
+					<p>Leon's Personal Website</p>
 				
 					<hr class="hr1"/>
 					</div>	
@@ -23,7 +23,7 @@
 				<div id="content">
 					<div id="main-content">
 						<div id="main-content">
-							<p><a href="http://blog.csdn.net/qq_38177305">CSDN博客日志(blog)</a></p>
+							<p></p>
 						</div>
 					<div>
 				</div>
@@ -33,7 +33,7 @@
 					<div id="footer-container">
 						<div id="footer-content">
 							<hr class="hr2"/>
-							<button><a href="#">more</a></button>
+							<button><a href="http://www.yintokilovericky.cf">more</a></button>
 						</div>
 					</div>
 		         </div>
