--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			    <!--页头 -->
 				<div id="header">
 					<div id="header-content"  >
-					<h1 id="change"><a href="js:bgImage();">Tell Her</a></h1>
+					<h1 id="change">Tell Her</h1>
 					<p>Leon's Personal Website</p>
 				
 					<hr class="hr1"/>
