--- a/index.html
+++ b/index.html
@@ -23,7 +23,20 @@
 				<div id="content">
 					<div id="main-content">
 						<div id="main-content">
-							<p></p>
+							<p>     我在你面前想好好说话时，总会变得一副吊儿郎当的样子，
+								  没个正经，所以我只能在这里写下要对你说的话。
+								以前的我，光会惹你哭，让你生气，都是我不好，
+								以后，我不会再让你哭了</p>
+							
+							
+                          <li>   每天都让你笑一次</li> 
+                         <li>   每天陪你做喜欢的事</li>
+				<li>   外出带好戒指</li>
+					 <li>   控制好自己的脾气，绝不对你发火，即使很生气最多就转身离开，不去理会</li> 
+							<li>   好好和你沟通</li>
+							<li>   认真听你说话，记住每一件重要的事</li>
+							<li>   一切都不强求</li>
+							<li>   暂时想到这些2019.3.20</li>
 						</div>
 					<div>
 				</div>
