--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <title>For Ricky</title>
     </head>
     <body background = "weather.png">
-        <h1 style="font-size:225px" align="center"><font color="#FF8040" >为了你，我要和全世界为敌了</font></h1>
+        <h1 style="font-size:225px" align="center"><font color="#FF8040" >哪怕和全世界为敌</font></h1>
         
         
     </body>
